added solr and datasource